[workspace.package]
name = "push-core"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
  "crates/libs/lib-consumer",
  "crates/libs/lib-core",
  "crates/services/consumer",
  "crates/services/producer",
  "crates/services/state_manager",
  "crates/services/websocket",
]

[workspace.dependencies]
tokio = { version = "1.35.1", features = [
  "rt-multi-thread",
  "signal",
  "macros",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "0.8.5"
redis = "0.24.0"
