[workspace.package]
name = "push-core"
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
  "crates/libs/lib-consumer",
  "crates/libs/lib-core",
  "crates/services/consumer",
  "crates/services/producer",
  "crates/services/state_manager",
  "crates/services/websocket",
]

[workspace.dependencies]
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
console-subscriber = "0.2.0"
tokio-util = "0.7.10"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
rand = "0.8.5"
redis = { version = "0.24.0", features = ['tokio-comp'] }
futures = "0.3.26"
futures-util = "0.3.30"
