[package]
name = "consumer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.3.1"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-lite = "2.2.0"
